; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_option_list.c_option_find_int_quiet.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_option_list.c_option_find_int_quiet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @option_find_int_quiet(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i8* @option_find(i32* %9, i8* %10)
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @atoi(i8* %15)
  store i32 %16, i32* %4, align 4
  br label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %17, %14
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i8* @option_find(i32*, i8*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
